# json-persistence

./: CMakeLists.txt  README.md  build.bat  build.sh
include/persistence/: base64.hpp  bytes.hpp  datetime.hpp  deserialize.hpp  deserialize_all.hpp  deserialize_array.hpp  deserialize_base.hpp  deserialize_bytes.hpp  deserialize_check.hpp  deserialize_date.hpp  deserialize_datetime.hpp  deserialize_enum.hpp  deserialize_fundamental.hpp  deserialize_map.hpp  deserialize_object.hpp  deserialize_pointer.hpp  deserialize_set.hpp  deserialize_string.hpp  deserialize_tuple.hpp  deserialize_variant.hpp  deserialize_vector.hpp  dictionary.hpp  enum.hpp  enum_utility.hpp  exception.hpp  number.hpp  object.hpp  object_members.hpp  object_reflection.hpp  parse.hpp  parse_all.hpp  parse_array.hpp  parse_base.hpp  parse_bytes.hpp  parse_date.hpp  parse_datetime.hpp  parse_enum.hpp  parse_fundamental.hpp  parse_items.hpp  parse_map.hpp  (+54 more)
include/persistence/detail/: bitset.hpp  config.hpp  context.hpp  defer.hpp  deserialize_aware.hpp  deserialize_context.hpp  document_context.hpp  engine.hpp  make_array.hpp  numeric_traits.hpp  output_context.hpp  parse_event.hpp  path.hpp  perfect_hash.hpp  pointer_traits.hpp  polymorphic_stack.hpp  references.hpp  segment.hpp  serialize_aware.hpp  serialize_context.hpp  traits.hpp  unlikely.hpp  version.hpp  write_aware.hpp  write_context.hpp
test/: boost.cpp  capture.hpp  definitions.hpp  deserialize_bytes.cpp  deserialize_container.cpp  deserialize_datetime.cpp  deserialize_enum.cpp  deserialize_fundamental.cpp  deserialize_object.cpp  deserialize_string.cpp  deserialize_tuple.cpp  deserialize_variant.cpp  detail.cpp  enumerations.hpp  example_classes.cpp  example_classes.hpp  example_enum_traits.hpp  example_enums.hpp  main.cpp  measure.hpp  random.hpp  schema.cpp  serialize_bytes.cpp  serialize_container.cpp  serialize_datetime.cpp  serialize_enum.cpp  serialize_fundamental.cpp  serialize_object.cpp  serialize_string.cpp  serialize_tuple.cpp  serialize_variant.cpp  string.hpp  test_deserialize.hpp  test_serialize.hpp
